src/objects/Zuora__Sync_History__c.object
<CustomObject>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Failure_Log__c</fullName>
        <label>Failure Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__Finished_On__c</fullName>
        <label>Finished On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__Is_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__Is_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__Is_Incremental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Incremental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__Job_State_Id__c</fullName>
        <label>Job State Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Process_For_CrmId_Change__c</fullName>
        <label>CRMID Processing Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Data</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Sync_By__c</fullName>
        <label>Sync By</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Sync_Error__c</fullName>
        <label>Sync Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__Sync_On__c</fullName>
        <label>Sync On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__Sync_Target__c</fullName>
        <label>Sync Target</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOUNTS_AND_RELATED_OBJECTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT_CATALOG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Sync_To__c</fullName>
        <label>Sync To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Target_Id__c</fullName>
        <label>Target Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Tenant_Id__c</fullName>
        <label>Tenant Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Hostname__c</fullName>
        <label>Zuora Hostname</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Sync History</label>
    <listViews>
        <fullName>All_Zuora_Sync_Logs</fullName>
        <columns>NAME</columns>
        <columns>Zuora__Finished_On__c</columns>
        <columns>Zuora__Failure_Log__c</columns>
        <columns>Zuora__Is_Success__c</columns>
        <columns>Zuora__Sync_Target__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Zuora Sync Logs</label>
    </listViews>
    <listViews>
        <fullName>Zuora_Sync_Failures</fullName>
        <columns>NAME</columns>
        <columns>Zuora__External_Id__c</columns>
        <columns>Zuora__Failure_Log__c</columns>
        <columns>Zuora__Finished_On__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zuora__Is_Success__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Zuora Sync Failures</label>
    </listViews>
    <nameField>
        <label>Sync History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>